Add join room button.
* Add modal class.
* Worker now load room from config file.

--- a/client/css/common.less
+++ b/client/css/common.less
@@ -1,11 +1,22 @@
+@size-400: ~"only screen and (min-width: 400px)";
+@size-600: ~"only screen and (min-width: 600px)";
+@size-900: ~"only screen and (min-width: 900px)";
+@size-1000: ~"only screen and (min-width: 1000px)";
+@size-1200: ~"only screen and (min-width: 1200px)";
+@size-1400: ~"only screen and (min-width: 1400px)";
+@size-1600: ~"only screen and (min-width: 1600px)";
+
 * {
     --terminal-bg-color: #222222;
     --terminal-text-color: #c9c9c9;
     --main-color: #3b4e39;
     --main-dark-color: #253125;
     --main-light-color: #576a54;
-    --secondary-color: #404557;
+    --secondary-color: #505d8f;
+    --secondary-dark-color: #39446d;
+    --secondary-light-color: #7686c9;
     --text-color: #c5ddc9;
+    --text-intense-color: #ffffff;
 }
 
 body {
