--- a/client/css/index.less
+++ b/client/css/index.less
@@ -4,7 +4,7 @@
 @import "utils";
 
 #menu {
-    width: 200px;  
+    width: 300px;
     background-color: var(--main-color);
     flex-shrink: 0;  
     
@@ -15,13 +15,47 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 35px;
+        height: 45px;
+    }
+
+    #button-container {
+        padding: 15px 25px;
+        display: flex;
+        justify-content: center;
+
+        button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            outline: none;
+            border: none;
+            border-radius: 100%;
+            background-color: var(--secondary-color);
+            color: var(--text-color);
+            transition: 0.3s all;
+            cursor: pointer;
+            height: 35px;
+            width: 35px;
+            // box-shadow: 0px 0px 5px var(--main-dark-color);
+            border: 1px solid var(--main-light-color);
+
+            &:hover {
+                filter: brightness(1.2);
+                color: white;
+            }
+
+            i {
+                font-size: 1.5rem;
+            }
+        }
     }
 
     #room-container {
         color: var(--text-color);
 
         .room {
+            margin-bottom: 10px;
+
             .name {
                 padding: 10px 10px 5px;
                 display: flex;
