Add terminals for each worker.
* Report leave and join on front.

--- a/client/css/common.less
+++ b/client/css/common.less
@@ -9,6 +9,7 @@
 * {
     --terminal-bg-color: #222222;
     --terminal-text-color: #c9c9c9;
+    --terminal-title-color: #a7a7a7;
     --main-color: #3b4e39;
     --main-dark-color: #253125;
     --main-light-color: #576a54;
@@ -17,6 +18,7 @@
     --secondary-light-color: #7686c9;
     --text-color: #c5ddc9;
     --text-intense-color: #ffffff;
+    --text-highlight: #cecf75;
 }
 
 body {
