--- a/client/css/utils.less
+++ b/client/css/utils.less
@@ -39,8 +39,8 @@
             color: #2689cc;
         }
 
-        .green {
-            color: #58b880;
+        .bold {
+            color: var(--text-highlight);
         }
     }
 }
