--- a/client/css/index.less
+++ b/client/css/index.less
@@ -85,104 +85,109 @@
 
 #frame {
     flex-grow: 1;
-    height: 100vh;
-    overflow: hidden;
+    min-height: 100vh;
+    overflow: auto;
     background-image: url('https://picsum.photos/640/480?blur=2');
     background-position: center;
     background-size: cover;
 
-    .window {
-        max-width: 500px;
-        margin: 3px;
-        border: 1px solid var(--terminal-title-color);
-        border-radius: 5px;
-        box-shadow: 1px 1px 3px black;
-        
-        #title {
-            display: flex;
-            align-items: center;
-            background-color: var(--terminal-title-color);
-            border-radius: 3px 3px 0 0;
-            height: 25px;
+    .room-terminal-container {
+        display: flex;
+        align-items: flex-start;
+
+        .window {
+            max-width: 500px;
+            margin: 3px;
+            border: 1px solid var(--terminal-title-color);
+            border-radius: 5px;
+            box-shadow: 1px 1px 3px black;
             
-            #text {
-                color: black;
-                margin-left: 10px;
-                text-align: center;
-                flex-grow: 1;
-                overflow: hidden;
-                white-space: nowrap;
-                text-overflow: ellipsis;
-            }
-
-            .button {
-                border-radius: 100%;
-                width: 15px;
-                height: 15px;
-                box-shadow: 0px 0px 3px black inset;
-                margin: 0 5px;
-                flex-shrink: 0;
-                cursor: pointer;
-                transition: 0.3s all;
-
-                &:hover {
-                    filter: brightness(1.2);
+            #title {
+                display: flex;
+                align-items: center;
+                background-color: var(--terminal-title-color);
+                border-radius: 3px 3px 0 0;
+                height: 25px;
+                
+                #text {
+                    color: black;
+                    margin-left: 10px;
+                    text-align: center;
+                    flex-grow: 1;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                }
+    
+                .button {
+                    border-radius: 100%;
+                    width: 15px;
+                    height: 15px;
+                    box-shadow: 0px 0px 3px black inset;
+                    margin: 0 5px;
+                    flex-shrink: 0;
+                    cursor: pointer;
+                    transition: 0.3s all;
+    
+                    &:hover {
+                        filter: brightness(1.2);
+                    }
+                }
+    
+                #close {
+                    background-color: #f86158;
+                }
+    
+                #minimize {
+                    background-color: #fbbf2d;
+                }
+                
+                #maximize {
+                    background-color: #2ccb43;
                 }
             }
-
-            #close {
-                background-color: #f86158;
-            }
-
-            #minimize {
-                background-color: #fbbf2d;
-            }
-            
-            #maximize {
-                background-color: #2ccb43;
-            }
-        }
-
-        #terminal {
-            padding: 5px 10px 0;
-            background-color: var(--terminal-bg-color);
-            color: var(--terminal-text-color);
-            box-sizing: border-box;
-            overflow-y: auto;
-            max-height: calc(100vh - 30px);
-            font-family: monospace;
-            
-            pre {
-                margin: 5px 0;
-                overflow-x: hidden;
-                white-space: pre-wrap;
-                word-break: break-all;
-            }
-        }
-        
-        
-        #input-container {
-            width: 100%;
-            background-color: var(--terminal-bg-color);
-            color: var(--terminal-text-color);
-            display: flex;
-            align-items: center;
-            padding: 0px 10px;
-            box-sizing: border-box;
-            font-family: monospace;
-            height: 30px;
-            border-radius: 0 0 3px 3px;
-            
-            input {
-                flex-grow: 1;
-                outline: none;
+    
+            .terminal {
+                padding: 5px 10px 0;
                 background-color: var(--terminal-bg-color);
                 color: var(--terminal-text-color);
-                padding: 5px;
-                font-size: 1rem;
-                border: none;
+                box-sizing: border-box;
+                overflow-y: auto;
+                max-height: calc(100vh - 60px);
                 font-family: monospace;
+                
+                pre {
+                    margin: 5px 0;
+                    overflow-x: hidden;
+                    white-space: pre-wrap;
+                    word-break: break-all;
+                }
+            }
+            
+            
+            #input-container {
+                width: 100%;
+                background-color: var(--terminal-bg-color);
+                color: var(--terminal-text-color);
+                display: flex;
+                align-items: center;
+                padding: 0px 10px;
+                box-sizing: border-box;
+                font-family: monospace;
+                height: 30px;
                 border-radius: 0 0 3px 3px;
+                
+                input {
+                    flex-grow: 1;
+                    outline: none;
+                    background-color: var(--terminal-bg-color);
+                    color: var(--terminal-text-color);
+                    padding: 5px;
+                    font-size: 1rem;
+                    border: none;
+                    font-family: monospace;
+                    border-radius: 0 0 3px 3px;
+                }
             }
         }
     }
