Enable click to activate room/worker. * Update css.

--- a/client/css/common.less
+++ b/client/css/common.less
@@ -10,15 +10,20 @@
     --terminal-bg-color: #222222;
     --terminal-text-color: #c9c9c9;
     --terminal-title-color: #a7a7a7;
-    --main-color: #3b4e39;
+    --main-color: 59, 78, 57;
     --main-dark-color: #253125;
     --main-light-color: #576a54;
-    --secondary-color: #505d8f;
+    --secondary-color: 80, 93, 143;
     --secondary-dark-color: #39446d;
     --secondary-light-color: #7686c9;
     --text-color: #c5ddc9;
     --text-intense-color: #ffffff;
     --text-highlight: #cecf75;
+    --room-1: 253, 233, 119;
+    --room-2: 253, 119, 119;
+    --room-3: 119, 155, 253;
+    --room-4: 119, 253, 179;
+    --room-5: 242, 119, 253;
 }
 
 body {
