--- a/client/css/utils.less
+++ b/client/css/utils.less
@@ -14,7 +14,7 @@
     }
 
     .toast {
-        background-color: var(--secondary-color);
+        background-color: rgb(var(--secondary-color));
         color: var(--text-color);
         border: 1px solid var(--main-dark-color);
         padding: 10px 20px;
@@ -66,7 +66,7 @@
     }
 
     .modal {
-        background-color: var(--secondary-color);
+        background-color: rgb(var(--secondary-color));
         color: var(--text-color);
         border-radius: 3px;
         box-sizing: border-box;
@@ -184,7 +184,7 @@
                 height: 35px;
                 width: 200px;
                 outline: none;
-                background-color: var(--main-color);
+                background-color: rgb(var(--main-color));
                 color: var(--text-intense-color);
                 cursor: pointer;
                 transition: 0.3s all;
