--- a/client/css/index.less
+++ b/client/css/index.less
@@ -3,9 +3,15 @@
 @import "common";
 @import "utils";
 
+body {
+    background-image: url('https://picsum.photos/640/480?blur=2');
+    background-position: center;
+    background-size: cover;
+}
+
 #menu {
     width: 300px;
-    background-color: var(--main-color);
+    background-color: rgba(var(--main-color), 0.8);
     flex-shrink: 0;
     border-right: 1px solid var(--main-light-color);
     box-shadow: 1px 0px 3px black;
@@ -13,11 +19,12 @@
     #logo {
         background-color: var(--main-light-color);  
         color: white;
-        font-size: 1.5rem;
+        font-size: 2rem;
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 45px;
+        height: 60px;
+        margin-bottom: 15px;
     }
 
     #button-container {
@@ -32,13 +39,12 @@
             outline: none;
             border: none;
             border-radius: 100%;
-            background-color: var(--secondary-color);
+            background-color: rgb(var(--secondary-color));
             color: var(--text-color);
             transition: 0.3s all;
             cursor: pointer;
-            height: 35px;
-            width: 35px;
-            // box-shadow: 0px 0px 5px var(--main-dark-color);
+            height: 50px;
+            width: 50px;
             border: 1px solid var(--main-light-color);
 
             &:hover {
@@ -47,7 +53,7 @@
             }
 
             i {
-                font-size: 1.5rem;
+                font-size: 2rem;
             }
         }
     }
@@ -56,27 +62,59 @@
         color: var(--text-color);
 
         .room {
-            margin-bottom: 10px;
+            padding: 0 0 10px;
+            margin: 10px;
+            border-radius: 3px;
+            cursor: pointer;
+            
+            &:hover {
+                .name { background-color: rgba(var(--secondary-color), 0.4); }
+                .worker .name { background-color: rgba(var(--secondary-color), 0.25); }
+            }
+
+            &.active {
+                .name { background-color: rgb(var(--secondary-color)); }
+                .name:hover { background-color: rgb(var(--secondary-color)); }
+                .worker .name { background-color: rgba(var(--secondary-color), 0.5); }
+            }
 
             .name {
-                padding: 10px 10px 5px;
+                padding: 10px;
                 display: flex;
                 align-items: center;
                 font-weight: bold;
-            }
+                font-size: 1.3rem;
+                text-transform: capitalize;
+                border-radius: 3px 3px 0 0;
+                transition: 0.3s all;
 
+                &:hover {
+                    background-color: rgba(var(--secondary-color), 0.6);
+                }
+            }
+            
             .worker {
                 
+                &:hover {
+                    .name { background-color: rgba(var(--secondary-color), 0.6); }
+                }
+    
+                &.active {
+                    .name { background-color: rgb(var(--secondary-color)); }
+                }
+
                 .name {
-                    border-left: 2px solid var(--main-dark-color);
-                    margin-left: 15px;
-                    padding: 5px 10px;
+                    color: var(--text-color);
+                    border-radius: 0 0 3px 3px;
+                    padding: 5px 0 5px 30px;
                     font-weight: normal;
                     max-width: 100%;
                     white-space: nowrap;
                     overflow: hidden;
                     text-overflow: ellipsis;
                     display: block;
+                    font-size: 1rem;
+                    transition: 0.3s all;
                 }
             }
         }
@@ -87,31 +125,37 @@
     flex-grow: 1;
     min-height: 100vh;
     overflow: auto;
-    background-image: url('https://picsum.photos/640/480?blur=2');
-    background-position: center;
-    background-size: cover;
+    padding: 5px 0;
+    box-sizing: border-box;
 
     .room-terminal-container {
         display: flex;
         align-items: flex-start;
+        padding: 5px 10px;
 
+        &:nth-child(1) #title { background-color: rgba(var(--room-1), 0.4); }
+        &:nth-child(2) #title { background-color: rgba(var(--room-2), 0.4); }
+        &:nth-child(3) #title { background-color: rgba(var(--room-3), 0.4); }
+        &:nth-child(4) #title { background-color: rgba(var(--room-4), 0.4); }
+        &:nth-child(5) #title { background-color: rgba(var(--room-5), 0.4); }
+        
         .window {
             max-width: 500px;
             margin: 3px;
             border: 1px solid var(--terminal-title-color);
             border-radius: 5px;
             box-shadow: 1px 1px 3px black;
+            background-color: var(--terminal-title-color);
             
             #title {
                 display: flex;
                 align-items: center;
-                background-color: var(--terminal-title-color);
                 border-radius: 3px 3px 0 0;
                 height: 25px;
+                font-weight: bold;
                 
                 #text {
-                    color: black;
-                    margin-left: 10px;
+                    color: rgba(0, 0, 0, 0.75);
                     text-align: center;
                     flex-grow: 1;
                     overflow: hidden;
