--- a/client/css/utils.less
+++ b/client/css/utils.less
@@ -15,11 +15,11 @@
 
     .toast {
         background-color: rgb(var(--secondary-color));
-        color: var(--text-color);
+        color: rgb(var(--text-color));
         border: 1px solid var(--main-dark-color);
         padding: 10px 20px;
         border-radius: 3px;
-        box-shadow: 0 0 5px var(--text-color);
+        box-shadow: 0 0 5px rgb(var(--text-color));
         margin-bottom: 10px;
         opacity: 0.8;
         transition: 1s all;
@@ -67,7 +67,7 @@
 
     .modal {
         background-color: rgb(var(--secondary-color));
-        color: var(--text-color);
+        color: rgb(var(--text-color));
         border-radius: 3px;
         box-sizing: border-box;
         display: flex;
