--- a/client/css/index.less
+++ b/client/css/index.less
@@ -41,7 +41,7 @@ body {
             border: none;
             border-radius: 100%;
             background-color: rgb(var(--secondary-color));
-            color: var(--text-color);
+            color: rgb(var(--text-color));
             transition: 0.3s all;
             cursor: pointer;
             height: 50px;
@@ -60,7 +60,7 @@ body {
     }
 
     #room-container {
-        color: var(--text-color);
+        color: rgb(var(--text-color));
 
         .room {
             padding: 0 0 10px;
@@ -104,8 +104,12 @@ body {
                     .name { background-color: rgb(var(--secondary-color)); }
                 }
 
+                &.closed .name {
+                    color: rgba(var(--text-color), 0.4);
+                }
+
                 .name {
-                    color: var(--text-color);
+                    color: rgb(var(--text-color));
                     border-radius: 0 0 3px 3px;
                     padding: 5px 0 5px 30px;
                     font-weight: normal;
@@ -134,6 +138,7 @@ body {
         align-items: flex-start;
         padding: 5px 10px;
         transition: 0.5s all;
+        flex-wrap: wrap;
 
         &:nth-child(1) #title { background-color: rgba(var(--room-1), 0.4); }
         &:nth-child(2) #title { background-color: rgba(var(--room-2), 0.4); }
@@ -143,7 +148,7 @@ body {
 
         &.active {
             .window {
-                box-shadow: 0px 0px 5px var(--text-color);
+                box-shadow: 0px 0px 5px rgb(var(--text-color));
             }
 
             #title {
@@ -162,7 +167,7 @@ body {
             transition: 0.3s all;
 
             &.active {
-                box-shadow: 0px 0px 5px var(--text-color);
+                box-shadow: 0px 0px 5px rgb(var(--text-color));
     
                 #title {
                     background-color: rgba(var(--secondary-color), 0.6);
