Update index menu with links.

--- a/client/css/index.less
+++ b/client/css/index.less
@@ -16,6 +16,10 @@ body {
     border-right: 1px solid var(--main-light-color);
     box-shadow: 1px 0px 3px black;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: space-between;
     
     #logo {
         background-color: var(--main-light-color);  
@@ -28,98 +32,128 @@ body {
         margin-bottom: 15px;
     }
 
-    #button-container {
-        padding: 15px 25px;
-        display: flex;
-        justify-content: center;
+    #content {
+        flex-grow: 1;
 
-        button {
+        #button-container {
+            padding: 15px 25px;
             display: flex;
-            align-items: center;
             justify-content: center;
-            outline: none;
-            border: none;
-            border-radius: 100%;
-            background-color: rgb(var(--secondary-color));
-            color: rgb(var(--text-color));
-            transition: 0.3s all;
-            cursor: pointer;
-            height: 50px;
-            width: 50px;
-            border: 1px solid var(--main-light-color);
-
-            &:hover {
-                filter: brightness(1.2);
-                color: white;
-            }
-
-            i {
-                font-size: 2rem;
-            }
-        }
-    }
-
-    #room-container {
-        color: rgb(var(--text-color));
-
-        .room {
-            padding: 0 0 10px;
-            margin: 10px;
-            border-radius: 3px;
-            cursor: pointer;
-            
-            &:hover {
-                .name { background-color: rgba(var(--secondary-color), 0.4); }
-                .worker .name { background-color: rgba(var(--secondary-color), 0.25); }
-            }
-
-            &.active {
-                .name { background-color: rgb(var(--secondary-color)); }
-                .name:hover { background-color: rgb(var(--secondary-color)); }
-                .worker .name { background-color: rgba(var(--secondary-color), 0.5); }
-            }
-
-            .name {
-                padding: 10px;
+    
+            button {
                 display: flex;
                 align-items: center;
-                font-weight: bold;
-                font-size: 1.3rem;
-                text-transform: capitalize;
-                border-radius: 3px 3px 0 0;
+                justify-content: center;
+                outline: none;
+                border: none;
+                border-radius: 100%;
+                background-color: rgb(var(--secondary-color));
+                color: rgb(var(--text-color));
                 transition: 0.3s all;
-
+                cursor: pointer;
+                height: 50px;
+                width: 50px;
+                border: 1px solid var(--main-light-color);
+    
                 &:hover {
-                    background-color: rgba(var(--secondary-color), 0.6);
+                    filter: brightness(1.2);
+                    color: white;
+                }
+    
+                i {
+                    font-size: 2rem;
                 }
             }
-            
-            .worker {
+        }
+    
+        #room-container {
+            color: rgb(var(--text-color));
+    
+            .room {
+                padding: 0 0 10px;
+                margin: 10px;
+                border-radius: 3px;
+                cursor: pointer;
                 
                 &:hover {
-                    .name { background-color: rgba(var(--secondary-color), 0.6); }
+                    .name { background-color: rgba(var(--secondary-color), 0.4); }
+                    .worker .name { background-color: rgba(var(--secondary-color), 0.25); }
                 }
     
                 &.active {
                     .name { background-color: rgb(var(--secondary-color)); }
+                    .name:hover { background-color: rgb(var(--secondary-color)); }
+                    .worker .name { background-color: rgba(var(--secondary-color), 0.5); }
                 }
-
-                &.closed .name {
-                    color: rgba(var(--text-color), 0.4);
-                }
-
+    
                 .name {
-                    color: rgb(var(--text-color));
-                    border-radius: 0 0 3px 3px;
-                    padding: 5px 0 5px 30px;
-                    font-weight: normal;
-                    max-width: 100%;
-                    white-space: nowrap;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    display: block;
-                    font-size: 1rem;
+                    padding: 10px;
+                    display: flex;
+                    align-items: center;
+                    font-weight: bold;
+                    font-size: 1.3rem;
+                    text-transform: capitalize;
+                    border-radius: 3px 3px 0 0;
                     transition: 0.3s all;
+    
+                    &:hover {
+                        background-color: rgba(var(--secondary-color), 0.6);
+                    }
+                }
+                
+                .worker {
+                    
+                    &:hover {
+                        .name { background-color: rgba(var(--secondary-color), 0.6); }
+                    }
+        
+                    &.active {
+                        .name { background-color: rgb(var(--secondary-color)); }
+                    }
+    
+                    &.closed .name {
+                        color: rgba(var(--text-color), 0.4);
+                    }
+    
+                    .name {
+                        color: rgb(var(--text-color));
+                        border-radius: 0 0 3px 3px;
+                        padding: 5px 0 5px 30px;
+                        font-weight: normal;
+                        max-width: 100%;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        display: block;
+                        font-size: 1rem;
+                        transition: 0.3s all;
+                    }
+                }
+            }
+        }
+    }
+
+    #social {
+        display: flex;
+        justify-content: space-evenly;
+        padding: 10px 0;
+        
+        a {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-end;
+            color: rgb(var(--text-color));
+            text-decoration: none;
+            text-align: center;
+
+            i {
+                font-size: 2rem;
+                transition: 0.3s all;
+                cursor: pointer;
+    
+                &:hover {
+                    filter: brightness(1.3);
                 }
             }
         }
