--- a/client/css/index.less
+++ b/client/css/index.less
@@ -136,7 +136,7 @@ body {
     #social {
         display: flex;
         justify-content: space-evenly;
-        padding: 10px 0;
+        padding: 10px 0 10px; 
         
         a {
             display: flex;
@@ -146,15 +146,18 @@ body {
             color: rgb(var(--text-color));
             text-decoration: none;
             text-align: center;
+            border-radius: 5px;
+            padding: 10px 20px;
+            transition: 0.3s all;
+            cursor: pointer;
+            
+            &:hover {
+                filter: brightness(1.3);
+                background-color: rgb(var(--main-color));
+            }
 
             i {
                 font-size: 2rem;
-                transition: 0.3s all;
-                cursor: pointer;
-    
-                &:hover {
-                    filter: brightness(1.3);
-                }
             }
         }
     }
