Add some more css.

--- a/client/css/common.less
+++ b/client/css/common.less
@@ -14,8 +14,8 @@
     --main-dark-color: #253125;
     --main-light-color: #576a54;
     --secondary-color: 80, 93, 143;
-    --secondary-dark-color: #39446d;
-    --secondary-light-color: #7686c9;
+    --secondary-dark-color: 57, 68, 109;
+    --secondary-light-color: 118, 134, 201;
     --text-color: 197, 221, 201;
     --text-intense-color: #ffffff;
     --text-highlight: #cecf75;
