* Fix wsslient error. * Improve css.

--- a/client/css/utils.less
+++ b/client/css/utils.less
@@ -6,7 +6,7 @@
     bottom: 0;
     right: 0;
     left: 0;
-    z-index: -1;
+    pointer-events: none;
     padding: 0 5px 15px 5px;
 
     &.center {
@@ -14,7 +14,6 @@
     }
 
     .toast {
-        z-index: 4;
         background-color: rgb(var(--secondary-color));
         color: rgb(var(--text-color));
         border: 1px solid var(--main-dark-color);
