Improve some css.

--- a/client/css/common.less
+++ b/client/css/common.less
@@ -11,8 +11,8 @@
     --terminal-text-color: #c9c9c9;
     --terminal-title-color: #a7a7a7;
     --main-color: 59, 78, 57;
-    --main-dark-color: #253125;
-    --main-light-color: #576a54;
+    --main-dark-color: 37, 49, 37;
+    --main-light-color: 87, 106, 84;
     --secondary-color: 80, 93, 143;
     --secondary-dark-color: 57, 68, 109;
     --secondary-light-color: 118, 134, 201;
