--- a/client/css/utils.less
+++ b/client/css/utils.less
@@ -16,10 +16,10 @@
     .toast {
         background-color: rgb(var(--secondary-color));
         color: rgb(var(--text-color));
-        border: 1px solid var(--main-dark-color);
+        // border: 1px solid rgb(var(--main-dark-color));
         padding: 10px 20px;
-        border-radius: 3px;
-        box-shadow: 0 0 5px rgb(var(--text-color));
+        border-radius: 5px;
+        box-shadow: 2px 2px 5px black;
         margin-bottom: 10px;
         opacity: 0.8;
         transition: 1s all;
@@ -68,7 +68,7 @@
     .modal {
         background-color: rgb(var(--secondary-color));
         color: rgb(var(--text-color));
-        border-radius: 3px;
+        border-radius: 5px;
         box-sizing: border-box;
         display: flex;
         border-color: rgb(var(--secondary-light-color));
