--- a/client/css/index.less
+++ b/client/css/index.less
@@ -13,8 +13,8 @@ body {
     width: 300px;
     background-color: rgba(var(--main-color), 0.8);
     flex-shrink: 0;
-    border-right: 1px solid var(--main-light-color);
-    box-shadow: 1px 0px 3px black;
+    // border-right: 1px solid rgb(var(--main-light-color));
+    box-shadow: 2px 0px 5px black;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -22,7 +22,7 @@ body {
     justify-content: space-between;
     
     #logo {
-        background-color: var(--main-light-color);  
+        background-color: rgb(var(--main-light-color));  
         color: white;
         font-size: 2rem;
         display: flex;
@@ -30,6 +30,7 @@ body {
         align-items: center;
         height: 60px;
         margin-bottom: 15px;
+        text-shadow: 2px 2px 3px rgba(var(--main-dark-color), 1);
     }
 
     #content {
@@ -50,16 +51,15 @@ body {
                 justify-content: center;
                 outline: none;
                 border: none;
-                // border-radius: 100%;
                 border-radius: 10px;
-                // background-color: rgba(var(--secondary-color), 1);
                 background-color: rgb(var(--secondary-color));
                 color: rgb(var(--text-color));
                 transition: 0.3s all;
                 cursor: pointer;
                 height: 50px;
                 width: 50px;
-                border: 1px solid var(--main-light-color);
+                border: 1px solid rgba(var(--secondary-dark-color), 0.5);
+                box-shadow: 0px 0px 5px rgba(var(--main-dark-color), 0.5);
                 margin-left: -175px;
                 margin-top: 30px;
                 z-index: 1;
@@ -82,6 +82,7 @@ body {
                 width: 100%;
                 user-select: none;
                 transition: 1.5s all;
+                filter: blur(2px);
 
                 .room {
                     padding: 0;
