Add intro message.

--- a/client/css/utils.less
+++ b/client/css/utils.less
@@ -103,9 +103,13 @@
             }    
                 
             a {
-                color: #2689cc;
+                color: #e2e473;
                 text-decoration: none;
                 cursor: pointer;    
+            }
+
+            p {
+                margin: 0 0 15px;
             }
 
             label {
