Add checkbox to dismiss intro modal.
* Add getDOMElement method to modal class.

--- a/client/css/utils.less
+++ b/client/css/utils.less
@@ -112,6 +112,17 @@
                 margin: 0 0 15px;
             }
 
+            .checkbox {
+                margin: 10px 0 20px 10px;
+                display: block;
+                cursor: pointer;
+
+                input {
+                    transform: scale(1.5);
+                    margin-right: 10px;
+                }
+            }
+
             label {
                 span {
                     opacity: .7;
