Add support to join-leave room.
* Independent of having workers or not.
* Button to leave room.

--- a/client/css/utils.less
+++ b/client/css/utils.less
@@ -103,9 +103,13 @@
             }    
                 
             a {
-                color: #e2e473;
+                color: var(--text-highlight);
                 text-decoration: none;
                 cursor: pointer;    
+            }
+
+            .highlight {
+                color: var(--text-highlight);
             }
 
             p {
