--- a/client/css/index.less
+++ b/client/css/index.less
@@ -39,7 +39,7 @@ body {
         #button-container {
             padding: 15px 0;
             display: flex;
-            // justify-content: center;
+            justify-content: center;
 
             &:hover #room-placeholder{
                 opacity: 0.2;
@@ -60,8 +60,7 @@ body {
                 width: 50px;
                 border: 1px solid rgba(var(--secondary-dark-color), 0.5);
                 box-shadow: 0px 0px 5px rgba(var(--main-dark-color), 0.5);
-                margin-left: -175px;
-                margin-top: 30px;
+                margin: 0 5px;
                 z-index: 1;
     
                 &:hover {
@@ -72,11 +71,24 @@ body {
                 i {
                     font-size: 2rem;
                 }
+
+                &:disabled {
+                    background-color: #6a6a6a;
+                    color: #9d9d9d;
+                    cursor: default;
+                    box-shadow: none;
+                    opacity: 0.6;
+
+                    &:hover {
+                        filter: none;
+                        color: #9d9d9d;
+                    }
+                }
             }
 
             #room-placeholder {
                 white-space: nowrap;
-                display: flex;
+                display: none;
                 flex-direction: column;
                 opacity: 0;
                 width: 100%;
